--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,35 @@
-<app-header></app-header>
-<h1>{{title}}</h1>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="main-container">
+
+  <app-header [sideNavBar]="sidenav"></app-header>
+
+  <mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #sidenav class="w-10p">
+
+
+      <mat-list>
+
+        <mat-list-item>
+          <mat-icon>home</mat-icon>
+          <span class="ml-15">
+            <a href="#">Home</a>
+          </span>
+        </mat-list-item>
+
+      </mat-list>
+
+
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+
+      <h1>Isso é uma aplicacao de teste</h1>
+
+      <router-outlet></router-outlet>
+
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+
+  <app-footer></app-footer>
+
+
+</div>
