--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .flx-evenly{
   justify-content: space-evenly;
 }
+
+.w-300{
+  width: 300px;
+}
