--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,15 @@
           </span>
         </mat-list-item>
 
+        <mat-divider></mat-divider>
+
+        <mat-list-item>
+          <mat-icon>check</mat-icon>
+          <span class="ml-15">
+            <a [routerLink]="['/checklist']" (click)="sidenav.toggle()">Checklist</a>
+          </span>
+        </mat-list-item>
+
       </mat-list>
 
 
