--- a/src/app/checklist-form/checklist-form.component.html
+++ b/src/app/checklist-form/checklist-form.component.html
@@ -8,7 +8,7 @@
 
 <mat-card-content>
 
-  <form [formGroup]="checklistForm" class="flx-clmn">
+  <form [formGroup]="checklistForm" class="flx-clmn" #checklistFormDirective="ngForm">
 
     <mat-form-field appearance="outline">
       <mat-label>Descrição</mat-label>
@@ -49,7 +49,7 @@
 
   <button mat-raised-button color="warn" (click)="cancel()">Cancelar</button>
 
-  <button mat-raised-button color="primary" (click)="save()">Salvar</button>
+  <button mat-raised-button color="primary" (click)="save()" type="submit">Salvar</button>
 
 </mat-card-actions>
 
