--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div>
+
+  <div class="home-content mt-100p">
+
+    <h1 class="home-title">Bem-vindo ao Checklist!</h1>
+
+    <img src="/assets/images/home-picture.png" width="450"/>
+
+  </div>
+
+</div>
