--- a/src/app/checklist/checklist.component.html
+++ b/src/app/checklist/checklist.component.html
@@ -8,7 +8,13 @@
 
   <mat-card-content>
 
-      <table mat-table [dataSource]="dataSource" class="w-100">
+      <mat-card *ngIf="dataSource?.length == 0">
+        <mat-card-content>
+          Não há registros de items do checklist.
+        </mat-card-content>
+      </mat-card>
+
+      <table mat-table *ngIf="dataSource.length > 0" [dataSource]="dataSource" class="w-100">
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef>Id</th>
@@ -19,8 +25,8 @@
           <th mat-header-cell *matHeaderCellDef>Completar Item</th>
           <td mat-cell *matCellDef="let element">
 
-             <mat-icon color="primary" *ngIf="!element.completed" (click)="updateCompleteStatus(true)">thumb_up</mat-icon>
-             <mat-icon color="warn" *ngIf="element.completed" (click)="updateCompleteStatus(false)">thumb_down</mat-icon>
+             <mat-icon color="warn" *ngIf="!element.isCompleted" (click)="updateCompleteStatus(element.guid, true)">thumb_down</mat-icon>
+             <mat-icon color="primary" *ngIf="element.isCompleted" (click)="updateCompleteStatus(element.guid, false)">thumb_up</mat-icon>
           </td>
         </ng-container>
 
@@ -36,12 +42,12 @@
 
         <ng-container matColumnDef="postDate">
           <th mat-header-cell *matHeaderCellDef>Data de postagem</th>
-          <td mat-cell *matCellDef="let element"> {{element.postDate | date: 'dd/MM/yyyy'}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.postedDate | date: 'dd/MM/yyyy'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="category">
           <th mat-header-cell *matHeaderCellDef>Categoria</th>
-          <td mat-cell *matCellDef="let element"> {{element.category.name}} </td>
+          <td mat-cell *matCellDef="let element">{{element.category.name}}</td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
