--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,14 @@
           </span>
         </mat-list-item>
 
+        <mat-list-item>
+          <mat-icon>check</mat-icon>
+          <span class="ml-15">
+            <a (click)="sidenav.toggle(); printToPdf()">Imprimir PDF</a>
+          </span>
+        </mat-list-item>
+
+
       </mat-list>
 
 
